tests/baselines/reference/duplicateLabel1.errors.txt
==== tests/cases/compiler/duplicateLabel1.ts (1 errors) ====
    target:
    target:
    ~~~~~~
!!! error TS2000: Duplicate identifier 'target'.
    while (true) {
    }